Fixed innovations not showing

--- a/css/style.css
+++ b/css/style.css
@@ -1583,7 +1583,6 @@ ul.tabs-nav .tab-nav.active {
 }
 
 .portfolio-wrap .portfolio-item {
-    display: none;
     margin-bottom: 30px;
 }
 
